[package]
name = "dncl_trans"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6.12"
proc-macro2 = "1.0.93"
quote = "1.0.38"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
syn = { version = "2.0.96", features = ["full", "extra-traits"] }
